[gd_scene load_steps=9 format=3 uid="uid://syu4ahi6b3c3"]

[ext_resource type="Texture2D" uid="uid://ckpdy76eosnyo" path="res://Assets/Telas/Tela_Jogo.png" id="1"]
[ext_resource type="FontFile" uid="uid://c7r1fa3kn0l70" path="res://Assets/PressStart2P.ttf" id="2"]
[ext_resource type="Script" path="res://Scripts/TelaInicial.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/startBtn.gd" id="4"]
[ext_resource type="Script" path="res://Scripts/quit.gd" id="5"]
[ext_resource type="Script" path="res://Scripts/options.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/select_character.gd" id="7"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="TelaInicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="TelaJogo" type="Sprite2D" parent="."]
position = Vector2(164, 99)
scale = Vector2(0.044, 0.044)
texture = ExtResource("1")

[node name="controls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 56.0
offset_right = 257.0
offset_bottom = 156.0

[node name="select_character" type="Button" parent="controls"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.517647, 0.807843, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_colors/font_focus_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_fonts/font = SubResource("1")
text = "Iniciar"
script = ExtResource("7")

[node name="startBtn" type="Button" parent="controls"]
visible = false
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.517647, 0.807843, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_colors/font_focus_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_fonts/font = SubResource("1")
text = "Iniciar"
script = ExtResource("4")

[node name="options" type="Button" parent="controls"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.517647, 0.807843, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_colors/font_focus_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_fonts/font = SubResource("1")
text = "Guia"
script = ExtResource("6")

[node name="quit" type="Button" parent="controls"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.517647, 0.807843, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_colors/font_focus_color = Color(0.992157, 0.403922, 0.580392, 1)
theme_override_fonts/font = SubResource("1")
text = "Sair"
script = ExtResource("5")

[connection signal="pressed" from="controls/select_character" to="." method="_on_select_character_pressed"]
[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="controls/quit" to="." method="_on_quit_pressed"]
